fix z-index issue on smaller screen

--- a/client/src/components/connectWalletModal/index.scss
+++ b/client/src/components/connectWalletModal/index.scss
@@ -2,5 +2,5 @@
     transition: all .3s ease-in-out;
 }
 .show-modal {
-    @apply -translate-y-1/2 opacity-100;
+    @apply -translate-y-1/2 opacity-100 z-20;
 }
